[project]
name = "proxychainer"
version = "1.2.4"
description = "Any -> Any Proxy Chainer"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.82.0",
    "requests",
    "httpx",
    "oauthlib",
]

[tool.setuptools.packages.find]
include = ["core*", "ui*", "utils*"]

[tool.flet]
app_name = "ProxyChainer"
product_name = "ProxyChainer"
description = "any → any proxy tunnel builder"
org = "com.proxychainer"
assets_dir = "assets"

[tool.flet.permissions]
internet = true